# ml-playground

./: README.md
GNN/simple_GNN_JAX/: README.md  pyproject.toml  requirements.txt  requirements_cpu.txt  requirements_gpu.txt
GNN/simple_GNN_JAX/simple_gnn_jax/: basics_jax.py  simple_dnn_jax.py  simple_gnn_jax.py
GNN/simple_GNN_pytorch/: requirements.txt
GNN/simple_GNN_pytorch/simple_gnn_pytorch/: simple_dnn_pytorch.py  simple_gnn_pytorch.py
LLM/HuggingFace/: requirements.txt
LLM/HuggingFace/huggingface/: huggingface_basics.py  huggingface_basics_finetuning.py  huggingface_basics_pipeline.py  huggingface_basics_semanticsearch.py
diffusion/diffusion-pytorch/: requirements.txt
diffusion/diffusion-pytorch/diffusion-pytorch/: diffusion.py
logistic_regression/: README.md  pyproject.toml  requirements.txt
logistic_regression/logistic_regression/: main.py
