[tool.poetry]
name = "logistic-regression"
version = "0.1.0"
description = ""
authors = ["jdmulligan <james.declan.mulligan@gmail.com>"]
readme = "README.md"
packages = [{include = "logistic_regression"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
matplotlib = "^3.7.3"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
