[tool.poetry]
name = "simple-gnn-jax"
version = "0.1.0"
description = ""
authors = ["jdmulligan <james.declan.mulligan@gmail.com>"]
readme = "README.md"
packages = [{include = "simple_gnn_jax"}]

[tool.poetry.dependencies]
python = "^3.11"
jax = {extras = ["cpu"], version = "^0.4.10"}
numpy = "^1.24.3"
flax = "^0.6.10"
torch = "^2.0.1"
optax = "^0.1.5"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
